# SeaBattle_SG_NV

./: CMakeLists.txt  SeaBattle_SG_NV.sln
SeaBattleTest/: Board.cpp  BoardTest.cpp  SeaBattleTest.vcxproj  Ship.cpp  pch.h
SeaBattle_SG_NV/: AI.cpp  AI.h  Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  SeaBattle_SG_NV.vcxproj  SeaBattle_SG_NV.vcxproj.filters  Ship.cpp  Ship.h
